add tests and manual for sim_data()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,14 @@
 
 export(build_constrMat)
 export(compute_frequencies)
-export(gen_URV_data)
 export(gen_loadings)
-export(gen_scores)
 export(get_S)
 export(get_corr)
 export(get_lambda)
 export(get_par_from_S)
 export(get_theta)
 export(get_tidy_path)
+export(sim_data)
 import(RcppClock)
 import(RcppEigen)
 import(RcppParallel)
