--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_lambda)
 export(get_par_from_S)
 export(get_theta)
 export(get_tidy_path)
+export(sampling_step)
 export(sim_data)
 import(RcppClock)
 import(RcppEigen)
