--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(build_constrMat)
 export(compute_frequencies)
+export(fit_plFA)
 export(gen_loadings)
 export(get_S)
 export(get_corr)
@@ -9,6 +10,7 @@ export(get_lambda)
 export(get_par_from_S)
 export(get_theta)
 export(get_tidy_path)
+export(plFA)
 export(sampling_step)
 export(sim_data)
 import(RcppClock)
