starting documentation and tests for fit_plFA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(compute_pair)
 export(estimate_H)
 export(estimate_J)
 export(fit_plFA)
+export(fit_plFA2)
 export(gen_loadings)
 export(get_S)
 export(get_S2)
