add unit tests fit_plFA inputs add PlFaFit class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(estimate_J)
 export(fit_plFA)
 export(fit_plFA2)
 export(gen_loadings)
+export(getThetaPath)
 export(get_S)
 export(get_S2)
 export(get_corr)
@@ -17,6 +18,8 @@ export(get_theta)
 export(get_tidy_path)
 export(sampling_step)
 export(sim_data)
+export(stoc_args)
+exportMethods(getThetaPath)
 import(RcppClock)
 import(RcppEigen)
 import(RcppParallel)
