- additional imports in namespace - remove legacy functions - fix man

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Imports:
     matrixcalc,
     purrr,
     dplyr,
-    numDeriv
+    numDeriv,
+    methods
 URL: https://github.com/giuseppealfonzetti/plFA
 BugReports: https://github.com/giuseppealfonzetti/plFA/issues
