--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,7 @@ import(RcppClock)
 import(RcppEigen)
 import(RcppParallel)
 importFrom(Rcpp,sourceCpp)
+importFrom(methods,new)
+importFrom(methods,slot)
+importFrom(stats,runif)
 useDynLib(plFA, .registration = TRUE)
