- encapsulate gradients for loadings and thresholds in grads namespace - tidy up parameters manipulation with params namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(fit_plFA)
 export(gen_loadings)
 export(getPar)
 export(getThetaPath)
+export(get_Lam)
 export(get_S)
 export(get_corr)
 export(get_lambda)
