--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: plFA
 Title: Fast pairiwse likelihood estimation of factor models for ordinal data
-Version: 0.0.0.9000
-Authors@R: 
-    person("Giuseppe", "Alfonzetti", 
-    email = "giuseppe.alfonzetti@uniud.it", 
-    role = c("aut", "cre"),
-    comment = c(ORCID = "0000-0002-6118-6553"))
+Version: 0.0.0.9001
+Authors@R:  c(
+    person("Giuseppe", "Alfonzetti", email = "giuseppe.alfonzetti@uniud.it", 
+           role = c("aut", "cre"), comment = c(ORCID = "0000-0002-6118-6553")),
+    person("Haziq", "Jamil", , "haziq.jamil@gmail.com", role = c("aut"),
+           comment = c(ORCID = "0000-0003-3298-1010"))
+  )
 Description: The plFA package provides a fast implementation of numerical and stochastic pairiwse likelihood estimation for factor models with ordinal data. 
 License: MIT + file LICENSE
 Suggests: 
@@ -19,6 +20,8 @@ LinkingTo:
     RcppEigen,
     RcppParallel,
     RcppClock
+Depends:
+    lavaan
 Imports: 
     Rcpp (>= 1.0.11),
     RcppEigen  (>= 0.3.3.9.3),
