progresses incorporating latent variances in cpp codebase and unit tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,13 @@ export(cpp_get_loadings_mat2vec)
 export(cpp_get_loadings_theta2mat)
 export(cpp_get_loadings_vec2mat)
 export(cpp_get_thresholds_theta2vec)
+export(cpp_latvar_mat2cmat)
+export(cpp_latvar_mat2vec)
+export(cpp_latvar_theta2mat)
+export(cpp_latvar_vec2cmat)
+export(cpp_latvar_vec2dmat)
+export(cpp_loadings_mat2vec)
+export(cpp_loadings_theta2mat)
 export(fit_plFA)
 export(gen_loadings)
 export(getPar)
