adapt numFit class to stdlv and fix est J

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,25 +3,21 @@
 export(build_constrMat)
 export(computeVar)
 export(compute_frequencies)
-export(cpp_get_latvar_mat2vec)
-export(cpp_get_latvar_theta2mat)
-export(cpp_get_latvar_theta2vec)
-export(cpp_get_latvar_vec2mat)
-export(cpp_get_loadings_mat2vec)
-export(cpp_get_loadings_theta2mat)
-export(cpp_get_loadings_vec2mat)
-export(cpp_get_thresholds_theta2vec)
 export(cpp_latvar_mat2cmat)
 export(cpp_latvar_mat2vec)
+export(cpp_latvar_theta2cmat)
+export(cpp_latvar_theta2dmat)
 export(cpp_latvar_theta2mat)
 export(cpp_latvar_vec2cmat)
 export(cpp_latvar_vec2dmat)
 export(cpp_loadings_mat2vec)
 export(cpp_loadings_theta2mat)
+export(cpp_loadings_theta2vec)
 export(fit_plFA)
 export(gen_loadings)
 export(getPar)
 export(getThetaPath)
+export(get_R)
 export(get_S)
 export(get_corr)
 export(get_lambda)
