implement standalone stochastic optimiser

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(cpp_latvar_vec2dmat)
 export(cpp_loadings_mat2vec)
 export(cpp_loadings_theta2mat)
 export(cpp_loadings_theta2vec)
+export(cpp_sa_proj)
 export(fit_plFA)
 export(gen_loadings)
 export(getPar)
@@ -24,7 +25,6 @@ export(get_corr)
 export(get_lambda)
 export(get_theta)
 export(get_tidy_path)
-export(legacy_fit_plFA)
 export(pairs_freq)
 export(sim_data)
 exportClasses(plFAlavaan)
