--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,17 +21,20 @@ LinkingTo:
     RcppParallel,
     RcppClock
 Depends:
+    lavaan,
     R (>= 3.5)
 Imports: 
-    lavaan,
     Rcpp (>= 1.0.11),
-    RcppEigen  (>= 0.3.3.9.3),
-    RcppParallel  (>= 5.1.7),
-    RcppClock  (>= 1.1),
+    RcppEigen (>= 0.3.3.9.3),
+    RcppParallel (>= 5.1.7),
+    RcppClock (>= 1.1),
     mvtnorm,
     ucminf,
     numDeriv,
-    methods
+    methods,
+    cli,
+    rlang,
+    stringr
 URL: https://github.com/giuseppealfonzetti/plFA
 BugReports: https://github.com/giuseppealfonzetti/plFA/issues
 LazyData: true
