Update docs, ensure pass checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,14 @@ import(RcppClock)
 import(RcppEigen)
 import(RcppParallel)
 importFrom(Rcpp,sourceCpp)
+importFrom(cli,col_blue)
+importFrom(cli,col_green)
+importFrom(cli,symbol)
 importFrom(lavaan,lavaan)
+importFrom(methods,callNextMethod)
 importFrom(methods,new)
 importFrom(methods,slot)
+importFrom(rlang,inform)
 importFrom(stats,runif)
+importFrom(stringr,str_pad)
 useDynLib(plFA, .registration = TRUE)
