--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: plFA
-Title: Fast pairiwse likelihood estimation of factor models for ordinal data
+Title: Fast pairwise likelihood estimation of factor models for ordinal data
 Version: 0.1.0
 Authors@R: c(
     person("Giuseppe", "Alfonzetti", email = "giuseppe.alfonzetti@uniud.it", 
