--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Authors@R: c(
 Description: The plFA package provides a fast implementation of numerical and stochastic pairiwse likelihood estimation for latent variable models with ordinal data. 
 License: MIT + file LICENSE
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
@@ -38,3 +40,4 @@ Imports:
 URL: https://github.com/giuseppealfonzetti/plFA
 BugReports: https://github.com/giuseppealfonzetti/plFA/issues
 LazyData: true
+VignetteBuilder: knitr
