--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -16,7 +16,7 @@ jobs:
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         config:
           - {os: macos-latest,   r: 'release'}
@@ -44,6 +44,10 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
+
+      - name: Install packages from GitHub
+        run: |
+          Rscript -e 'pak::pak("haziqj/lavaan.bingof")'
 
       - uses: r-lib/actions/check-r-package@v2
         # if: ${{ matrix.config.os != 'windows-latest' }}
