--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(methods,callNextMethod)
 importFrom(methods,new)
 importFrom(methods,slot)
 importFrom(rlang,inform)
+importFrom(stats,nobs)
 importFrom(stats,runif)
 importFrom(stringr,str_pad)
 useDynLib(plFA, .registration = TRUE)
