--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Suggests:
     lavaan.bingof,
     purrr,
     rmarkdown,
+    sessioninfo,
     testthat (>= 3.0.0),
     tidyverse,
     tinytest
