Now fit_plFA calls an improved SA implementation. The method pltTraj() is also available to visually diagnose stochastic trajectories

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,10 @@ Suggests:
     sessioninfo,
     testthat (>= 3.0.0),
     tidyverse,
-    tinytest
+    tinytest,
+    dplyr,
+    tidyr,
+    ggplot2
 LinkingTo: 
     Rcpp,
     RcppClock,
