--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(compute_frequencies)
 export(fit_plFA)
 export(gen_loadings)
 export(getPar)
-export(getThetaPath)
 export(get_R)
 export(get_S)
 export(get_corr)
@@ -27,6 +26,7 @@ importFrom(lavaan,lavaan)
 importFrom(methods,callNextMethod)
 importFrom(methods,new)
 importFrom(methods,slot)
+importFrom(rlang,.data)
 importFrom(rlang,inform)
 importFrom(stats,runif)
 importFrom(stringr,str_pad)
