--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: plFA
+Package: lavaan.pl
 Title: Fast pairwise likelihood estimation of factor models for ordinal
     data
 Version: 0.1.0.9002
@@ -8,12 +8,12 @@ Authors@R: c(
     person("Haziq", "Jamil", , "haziq.jamil@gmail.com", role = "aut",
            comment = c(ORCID = "0000-0003-3298-1010"))
   )
-Description: The plFA package provides a fast implementation of numerical
+Description: The lavaan.pl package provides a fast implementation of numerical
     and stochastic pairiwse likelihood estimation for latent variable
     models with ordinal data.
 License: MIT + file LICENSE
-URL: https://giuseppealfonzetti.github.io/plFA/
-BugReports: https://github.com/giuseppealfonzetti/plFA/issues
+URL: https://giuseppealfonzetti.github.io/lavaan.pl/
+BugReports: https://github.com/giuseppealfonzetti/lavaan.pl/issues
 Depends:
     R (>= 3.5)
 Imports: 
