--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,4 +30,4 @@ importFrom(rlang,.data)
 importFrom(rlang,inform)
 importFrom(stats,runif)
 importFrom(stringr,str_pad)
-useDynLib(plFA, .registration = TRUE)
+useDynLib(lavaan.pl, .registration = TRUE)
